# scxctl-manager

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  scxctl-manager.desktop
